<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TriangleActivity">

    <ImageView
        android:id="@+id/squareImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/triangle"
        android:layout_marginTop="50dp"/>
    <TextView
        android:id="@+id/tvEnterSide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_sides_and_height"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/squareImage" />
    <EditText
        android:id="@+id/etEnterSideA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvEnterSide"
        android:hint="@string/side_pq"
        android:inputType="number"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/etEnterSideB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEnterSideA"
        android:hint="@string/enter_qr"
        android:inputType="number"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/etEnterSideC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEnterSideB"
        android:hint="@string/enter_pr"
        android:inputType="number"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/etEnterHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEnterSideC"
        android:hint="@string/height_h"
        android:inputType="number"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/btnCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count"
        android:layout_below="@id/etEnterHeight"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/area_formula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCount"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/triangle_area_formula"/>
    <TextView
        android:id="@+id/perimeter_formula"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/area_formula"
        android:text="@string/triangle_perimeter_formula"/>

    <TextView
        android:id="@+id/resultArea"
        android:text="@string/result_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/perimeter_formula"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"/>
    <TextView
        android:id="@+id/resultPerimeter"
        android:layout_marginLeft="10dp"
        android:text="@string/result_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resultArea"
        android:layout_marginTop="25dp"/>
    <Button
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_result"
        android:layout_below="@id/resultPerimeter"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>