<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CircleActivity">

    <ImageView
        android:id="@+id/squareImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/circle"
        android:layout_marginTop="50dp"/>
    <TextView
        android:id="@+id/tvEnterRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_radius"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/squareImage" />
    <EditText
        android:id="@+id/etEnterRadius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvEnterRadius"
        android:hint="@string/radius_circle"
        android:inputType="number"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/btnCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count"
        android:layout_below="@id/etEnterRadius"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/area_of_square"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCount"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/circle_area_formula"/>
    <TextView
        android:id="@+id/perimeter_of_square"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/area_of_square"
        android:text="@string/circle_perimeter_formula"/>

    <TextView
        android:id="@+id/resultArea"
        android:text="@string/result_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/perimeter_of_square"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"/>
    <TextView
        android:id="@+id/resultPerimeter"
        android:layout_marginLeft="10dp"
        android:text="@string/result_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resultArea"
        android:layout_marginTop="25dp"/>
    <Button
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_result"
        android:layout_below="@id/resultPerimeter"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>